--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -3,12 +3,19 @@
                     { :action => 'create'} : 
                     { :action => 'update', :id => @page} ,
             :html => {:id => 'edit_form'} do |f| %>
-  <label for="page_title">Titel:</label><br/>
-    <%= f.text_field 'title', :size => 20 %><br/>
-  <label for="page_category">Kategorie:</label><br/>
-    <%= f.text_field 'category' %><br/>
-  <label for="page_body">Inhalt:</label><br/>
-    <%= f.text_area 'body' %><br/>
-  <%= submit_tag @page.new_record? ? "Anlegen" : "Speichern" %>
-  <%= link_to "Abbrechen", :action => :index %>
+            
+  <p>
+    <label for="page_title">Titel:</label>
+    <%= f.text_field 'title', :size => 20 %>
+  </p>
+
+  <p>
+    <label for="page_body">Inhalt:</label>
+    <%= f.text_area 'body' %>
+  </p>
+  <p>
+    <label for="Submit"></label>
+    <%= submit_tag @page.new_record? ? "Anlegen" : "Speichern" %>
+    <%= link_to "Abbrechen", :action => :index %>
+  </p>
 <% end %>
